@@ -253,7 +253,6 @@ void ptk_file_browser_unselect_all( GtkWidget* item, PtkFileBrowser* file_browse
 void ptk_file_browser_select_pattern( GtkWidget* item, PtkFileBrowser* file_browser,
                                                         const char* search_key ); //sfm
 void ptk_file_browser_canon( PtkFileBrowser* file_browser, const char* path );
-char* ptk_file_browser_get_cursor_path( PtkFileBrowser* file_browser );
 
 void ptk_file_browser_rename_selected_files( PtkFileBrowser* file_browser,
                                                         GList* files, char* cwd );
